# machine-json-rpc

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
src/: lib.rs
src/client/: conversions.rs  mod.rs
src/interfaces/: index.rs  mod.rs
tests/: cartesi_machine_client_tests.rs
