[package]
name = "cartesi-machine-json-rpc"
version = "0.1.0"
edition = "2018"
authors = [
  "Zachary Belford <belfordz66@gmail.com>",
  "Mike Lubinets <public@mersinvald.me>",
  "Marko Atanasievski <marko.atanasievski@cartesi.io>",
]

[dependencies]
base64 = "0.21.3"
derive_builder = "0.12.0"
jsonrpsee = {version = "0.18.2", features=["client-core", "jsonrpsee-http-client"]}
serde = "1.0.188"
serde_json = "1.0.105"

[dev-dependencies]
rstest = "0.18.2"
rand = "0.8.5"
